# ChangeLog for app-backup/luckybackup
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-backup/luckybackup/ChangeLog,v 1.16 2012/01/28 23:33:30 johu Exp $

  28 Jan 2012; Johannes Huber <johu@gentoo.org> -luckybackup-0.4.0.ebuild:
  Remove old.

  28 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  luckybackup-0.4.6.ebuild:
  x86 stable wrt bug #399915

  27 Jan 2012; Agostino Sarubbo <ago@gentoo.org> luckybackup-0.4.6.ebuild:
  Stable for amd64, wrt bug #399915

*luckybackup-0.4.6 (21 Jul 2011)

  21 Jul 2011; Tomas Touceda <chiiph@gentoo.org> -luckybackup-0.4.3.ebuild,
  -luckybackup-0.4.4.ebuild, +luckybackup-0.4.6.ebuild:
  Version bump, remove old

*luckybackup-0.4.4 (02 Nov 2010)

  02 Nov 2010; Theo Chatzimichos <tampakrap@gentoo.org>
  +luckybackup-0.4.4.ebuild:
  Version bump

*luckybackup-0.4.3 (06 Sep 2010)

  06 Sep 2010; Theo Chatzimichos <tampakrap@gentoo.org>
  -luckybackup-0.3.5.ebuild, +luckybackup-0.4.3.ebuild:
  Version bump, remove old

  16 Jul 2010; Christian Faulhammer <fauli@gentoo.org>
  luckybackup-0.4.0.ebuild:
  stable x86, bug 326265

  01 Jul 2010; Markos Chandras <hwoarang@gentoo.org>
  luckybackup-0.4.0.ebuild:
  Stable on amd64 wrt bug #326265

*luckybackup-0.4.0 (30 May 2010)

  30 May 2010; Markos Chandras <hwoarang@gentoo.org>
  +luckybackup-0.4.0.ebuild:
  Version bump. Fixes bug #321065

  06 Jan 2010; <hwoarang@gentoo.org> luckybackup-0.3.5.ebuild:
  Migrate to qt4-r2 eclass

  18 Dec 2009; Samuli Suominen <ssuominen@gentoo.org>
  luckybackup-0.3.5.ebuild:
  More documentation path issues wrt #297443, thanks to Helmut Jarausch for
  reporting.

*luckybackup-0.3.5 (17 Dec 2009)

  17 Dec 2009; Samuli Suominen <ssuominen@gentoo.org>
  +luckybackup-0.3.5.ebuild:
  Version bump.

*luckybackup-0.3.4 (16 Dec 2009)

  16 Dec 2009; Samuli Suominen <ssuominen@gentoo.org>
  +luckybackup-0.3.4.ebuild:
  Version bump and change documentation directory to PF wrt #297135, thanks