@@ -2,17 +2,19 @@
 Hash: SHA512
 
 DIST luckybackup-0.4.6.tar.gz 5395019 RMD160 890ecc7f9204df2a1a075428e86d864dfd8685d9 SHA1 c323bf65bfc52dad2ea6f40da46820f4b140d7f3 SHA256 beda2b69fea7bee5c8854e92305c07e65a64c2114ece247d8f4399e7f80e6428
+DIST luckybackup-0.4.7.tar.gz 5393530 RMD160 1c102514416ae40a0d3a972951193d3516d8f5eb SHA1 7a436c29a636e359991cd131a5a966e3d4755372 SHA256 492f27f9e846d5f11d9a4466aa821803b17eb7c3047f9cf082bc66be3d093f4d
 EBUILD luckybackup-0.4.6.ebuild 844 RMD160 c3e50353a24c0c063928a46395b8f23586f32d21 SHA1 309773f05f43274ddc3dc7f2d2871bde08c40c7a SHA256 3ca21a31e1f458413622a206cc62d672a003515b5feeb0266d181df3261f8d89
-MISC ChangeLog 2562 RMD160 7708b816222020c13fdbae8bc6e4ff731e609549 SHA1 87713c7b6f3213f5bbd22f8cce1753765479ab73 SHA256 5ccca3a5e854a545b778b4fdd27b441acd4f1bc73f1330634ead75f19d228d6e
+EBUILD luckybackup-0.4.7.ebuild 1111 RMD160 94973af6502f8ba29867ab6457ef657657455f45 SHA1 fd3cd87fb6e5138f61cebd0f90b53cd96eb28687 SHA256 685d3691ba7de3afbaf85f9b41761806082c82b65fb4c72e3ca0537dccecaa7d
+MISC ChangeLog 2748 RMD160 d7c6d95950de0637ca3f58139799a69a8c139c7f SHA1 647d76126f82420c09670d84df6310ddcc2fa30e SHA256 40f101bc6a37129faf2d8f9b3d47478797f0bd978e74667ea934b76030093e04
 MISC metadata.xml 155 RMD160 654eebe07944b4d18c58e4a54c50758eceead53e SHA1 967490b59f5185a6849cb5583390dd0d0b0dd512 SHA256 94ed5876ef16dbc191744ff6b8939a0f428fcb8add316d898880e1c4c880b9e7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQEcBAEBCgAGBQJPJIWSAAoJEO+t9ga+3I3axc4H/3Qx+vr4lNQ25ShLUZRw6K4+
-QAO1c2fUBjazl3OF7OKGqaISvpViDSm00EST6lCc5jIbpfgwAVJ3Mp12IA+/t9DV
-KJ9pODRqwQBEPeGRmdiAAUd6YkqY7omZuQV6PAJnmBGmWFE7zNZ1FWOV4CzEMcfO
-kNYOIpZxKx64oXxA7/QTfWWYcxEXJCQMJbG8LPyNwic00x+fA9v4BltuAlf/EApk
-4n5FEmdeWoog01szvqDRl0WCr3q8NnjmTk6ChogbS5PBhxhZwGR4O9OP1qkqhQ/h
-SvqmayvrMevEFnngXTcpeQRaRqX00Bl6VIq0TdqJuALplVcVsC1oV/vQ8J23S2M=
-=tcFR
+iQEcBAEBCgAGBQJPY0LIAAoJEO+t9ga+3I3aFnIIAJSvBi/o5WNrRHP19Qwy/EAq
+7jgc5sc9cpcPmDqcx7UroQqZAw/HDVW1IdrgFy4lxt3vwYSpWLYLMbCk6w7FEcef
+Aa+wSgG1UlN/OJuoHwbnYCJLH3sC7BAExR4rGqb9Evcjx3SMs7Ivb3NyZ+s9zjaS
+1Xel9YNqzF74mfeQM6GnPAZ/duCTQHDc83yM1HUndMIfb7eCcRi2e63bvBgjXUgZ
+AqQXpeZ5D6jNbJW02R15D4jgTog9dS20qZ1j3GG+NLEi4GKWlswtmkyHTW0umidz
+8lINsP5e2egtNaS9DjDLjYTSGFNICTr4FP4SHgkdheQxNicETIMjXDEGI6fHymI=
+=2V0U
 -----END PGP SIGNATURE-----
